--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 What can you forego, for good, today?
             </div>
         </div>
-            <div id="foregoHeading" style="margin-top:20px;"class="col-xs-12 col-sm-12 col-md-12">
+            <div id="foregoHeading" style="margin-top:20px;margin-bottom:20px;" class="col-xs-12 col-sm-12 col-md-12">
                 I WILL FOREGO
             </div>
 <div id="squareGrid">
@@ -108,7 +108,7 @@
     </div>
     </div>
 </div>
-<div style="margin-bottom:30px;" id="foregoHeading" class="col-xs-12 col-sm-12 col-md-12">
+<div style="margin-bottom:20px;margin-top:20px;" id="foregoHeading" class="col-xs-12 col-sm-12 col-md-12">
                 FOR GOOD
 </div>
     </div>
