--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 <!--<li><a href="">My Portfolio</a></li>-->
             </ul> 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="">My Portfolio</a></li>
+                <li><a href="/index.html">Donate</a></li>
+                <li><a href="/portfolio.html">My Portfolio</a></li>
                 <li><a href="" target="_blank"><img src="img/facebook.png" alt="fb" style="margin-top:-4px;"></a></li>
                 <li><a href="" target="_blank"><img src="img/twitter.png" alt="twitter"></a></li>
               </ul>
@@ -47,60 +48,60 @@
                 I WILL FOREGO
             </div>
 <div id="squareGrid">
-    <div class="square">
+    <div class="square" id="coffee" onclick="PopulateModal('coffee', '5')">
     <div class="content">
         <div class="table">
-            <div id="coffee" class="table-cell" onclick="PopulateModal('Coffee', '5')">
+            <div class="table-cell">
                 <div class="iconText">$5</div>
                 <img class="iconblack" src="img/Coffe_Cup_Outline_512.png" alt="coffee">
             </div>
         </div>
     </div>
     </div>
-    <div class="square">
+    <div class="square" id="wine" onclick="PopulateModal('wine', '25')">
     <div class="content">
         <div class="table">
-            <div id="wine" class="table-cell" onclick="PopulateModal('Wine', '25')">
+            <div class="table-cell">
                 <div class="iconText">$25</div>
                 <img class="iconblack" src="img/Wine_bottle_512.png" alt="coffee">
             </div>
         </div>
     </div>
     </div>
-    <div class="square">
+    <div class="square" id="taxi" onclick="PopulateModal('taxi', '50')">
     <div class="content">
         <div class="table">
-            <div id="taxi" class="table-cell" onclick="PopulateModal('Taxi', '50')">
+            <div id="taxi" class="table-cell">
                 <div class="iconText">$50</div>
                 <img class="iconblack" src="img/Taxi_512.png" alt="coffee">
             </div>
         </div>
     </div>
     </div>
-     <div class="square">
+     <div class="square" id="food" onclick="PopulateModal('food', '45')">
     <div class="content">
         <div class="table">
-            <div id="food" class="table-cell" onclick="PopulateModal('Food', '45')">
+            <div class="table-cell">
                 <div class="iconText">$45</div>
                 <img class="iconblack" src="img/Restaurant_interface_symbol_of_fork_and_knife_couple_512.png" alt="coffee">
             </div>
         </div>
     </div>
     </div>
-     <div class="square">
+     <div class="square" id="clothes" onclick="PopulateModal('clothes', '100')">
     <div class="content">
         <div class="table">
-            <div id="clothes" class="table-cell" onclick="PopulateModal('Clothes', '100')">
+            <div class="table-cell">
                 <div class="iconText">$100</div>
                 <img class="iconblack" src="img/Clothing_hanger_512.png" alt="coffee">
             </div>
         </div>
     </div>
     </div>
-     <div class="square">
+     <div class="square" id="travel" onclick="PopulateModal('travel', '250')">
     <div class="content">
         <div class="table">
-            <div id="travel" class="table-cell" onclick="PopulateModal('Travel', '250')">
+            <div class="table-cell">
                 <div class="iconText">$250</div>
                 <img class="iconblack" src="img/Travelling_luggage_512.png" alt="coffee">
             </div>
@@ -109,7 +110,7 @@
     </div>
 </div>
 <div style="margin-bottom:20px;margin-top:20px;" id="foregoHeading" class="col-xs-12 col-sm-12 col-md-12">
-                FOR GOOD
+FOR GOOD
 </div>
     </div>
 
