--- a/portfolio.html
+++ b/portfolio.html
@@ -44,17 +44,28 @@
              </div>
         <div class="row">
              <div id="stats" class="col-xs-12 col-sm-12 col-md-12">
-             <div class="row">
-               <div class="col-xs-4" style="">
-                   <div class="label">INVESTMENT TOTAL</div>
-                 </div>
-                <div class="col-xs-4" style="">
-                  <div class="label">ACTIVE LOANS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                <div class="square" style="border:0px;">
+                    <div class="content">
+                        <div class="table">
+                            <div class="table-cell">
+                                <div style="text-align:left;font-size:18px;">INVESTMENT TOTAL</div>
+                                <hr>
+                                <div style="text-align:left;font-size:18px;">$1, 060</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                 <div class="col-xs-4">
-                      <div class="label">ACCOUNT BALANCE&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                <div class="square" style="border:0px;">
+                    <div class="content">
+                        <div class="table">
+                            <div class="table-cell">
+                                <div style="text-align:left;font-size:18px;">ACCOUNT BALANCE</div>
+                                <hr>
+                                <div style="text-align:left;font-size:18px;">+$130</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
     </div>
