--- a/portfolio.html
+++ b/portfolio.html
@@ -68,6 +68,78 @@
                 </div>
             </div>
         </div>
+        <div class="row" style="background-color:#D0D0D0">
+            <div id="grey" class="col-xs-12 col-sm-12 col-md-12" style="padding:10px;">
+                <div style="text-align:left;font-size:18px;color:black;font-weight:bold;">MY IMPACT</div>
+                <hr>
+                <div class="square">
+                    <div class="content">
+                        <div class="table">
+                            <div class="table-cell">
+                                <img class="iconblack" src="img/Number_nine_in_a_circle_512.png" alt="coffee">
+                                <div style="text-align:center;padding-top:5px;" class="iconText">ACTIVE LOANS</div>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="square">
+                    <div class="content">
+                        <div class="table">
+                            <div id="taxi" class="table-cell">
+                                <img class="iconblack" src="img/Business_strategy_presentation_of_a_businessman_512.png" alt="coffee">
+                                <div style="text-align:center;padding-top:5px;" class="iconText">PROJECTS</div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+            <div class="square">
+                    <div class="content">
+                        <div class="table">
+                            <div id="taxi" class="table-cell">
+                                <img class="iconblack" src="img/User_male_black_shape_512.png" alt="coffee">
+                                <div style="text-align:center;padding-top:5px;" class="iconText">PEOPLE</div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+            <div class="square">
+                    <div class="content">
+                        <div class="table">
+                            <div id="taxi" class="table-cell">
+                                <img class="iconblack" src="img/Earth_512.png" alt="coffee">
+                                <div style="text-align:center;padding-top:5px;" class="iconText">PLACES</div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12" style="padding:10px;">
+                <div style="text-align:left;font-size:18px;color:black;font-weight:bold;">RECENT TRANSACTIONS</div>
+                <hr>
+                <div class="square">
+                    <div class="content">
+                        <div class="table">
+                            <div class="table-cell">
+                                <div class="iconText">$5</div>
+                                <img class="iconblack" src="img/Coffe_Cup_Outline_512.png" alt="coffee">
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="square">
+                    <div class="content">
+                        <div class="table">
+                            <div class="table-cell">
+                                <div class="iconText">$25</div>
+                                <img class="iconblack" src="img/Wine_bottle_512.png" alt="coffee">
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+            </div>
+        </div>
     </div>
                  
                  
