--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ FOR GOOD
       </div>
       <div class="modal-body">
         <p id="modalDescription" style="text-align:center; font-size:18px;">
-            Your investment of <span id="price">0</span> has been recieved.</br></br><a href="">VIEW PORTFOLIO</a>
+            Your investment of <span id="price">0</span> has been recieved.</br></br><a href="portfolio.html">VIEW PORTFOLIO</a>
           </p>
           <div id="modalImages"></div>
       </div>
