--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container-fluid" style="margin-top:55px;">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 bannerText" id="bannerText">
-                Thank you Julie for supporting Good Return.</br>
+                Thank you Matt for supporting Good Return.</br>
             Your portfolio is currently funding 12 projects and changing the lives of 160 people.</br>
                 Saying yes to ending poverty is as easy as saying no every now and then.</br>
                 What can you forego, for good, today?
